# water-buddy

./: AGENTS.md  CLAUDE.md  README.md  WaterBuddy.spec  index.html  pyproject.toml  requirements-build.txt  requirements.txt  worklog-20260708.md
docs/: index.html  worklog-20260707.md  worklog-20260708.md
scripts/: build_exe.ps1
src/water_buddy/: __init__.py  config.py  excel_log.py  main.py  startup.py
tests/: test_config.py  test_excel_log.py
