[project]
name = "water-buddy"
version = "0.1.0"
description = "A gentle Windows water reminder desktop companion."
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "openpyxl>=3.1",
]

[project.scripts]
water-buddy = "water_buddy.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
